--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "scripts": {
-        "test": "./vendor/bin/phpunit tests/",
+        "test": "./vendor/bin/phpunit --configuration=phpunit.xml",
         "cs-fix": "./vendor/bin/php-cs-fixer fix -vv ./src/ ./tests/ --config=.php_cs.dist"
     },
     "require": {
