--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16.3",
         "roave/security-advisories": "dev-master",
-        "phpunit/phpunit": "^8.4.3 || ^9.0"
+        "phpunit/phpunit": "^7.5.20"
     },
     "autoload": {
         "psr-4": {
